--- a/terraform/main.tf.example
+++ b/terraform/main.tf.example
@@ -21,13 +21,13 @@ module "oracle_toolkit" {
   ## MANDATORY SETTINGS
   ##############################################################################
   # General settings
-  region                             = "REGION"          # example: us-central1
-  zone                               = "ZONE"            # example: us-central1-b
-  project_id                         = "PROJECT_ID"      # example: my-project-123
-  subnetwork                         = "SUBNET"          # example: default
-  vm_service_account                 = "SERVICE_ACCOUNT" # example: oracle-vm-runner@my-project-123.iam.gserviceaccount.com
-  control_node_service_account       = "SERVICE_ACCOUNT" # example: control-node-sa@my-project-123.iam.gserviceaccount.com
-  gcs_source                         = "GCS_BUCKET_NAME" # example: provisioning-artifacts-bucket
+  gcs_source                         = "GCS_SOURCE"                   # example: gs://your-bucket-name/oracle-toolkit.zip
+  region                             = "REGION"                       # example: us-central1
+  zone                               = "ZONE"                         # example: us-central1-b
+  project_id                         = "PROJECT_ID"                   # example: my-project-123
+  subnetwork                         = "SUBNET"                       # example: default
+  vm_service_account                 = "VM_SERVICE_ACCOUNT"           # example: oracle-vm-runner@my-project-123.iam.gserviceaccount.com
+  control_node_service_account       = "CONTROL_NODE_SERVICE_ACCOUNT" # example: control-node-sa@my-project-123.iam.gserviceaccount.com
 
   # Instance settings
   instance_name        = "INSTANCE_NAME"  # example: oracle-rhel8-example
