--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -112,7 +112,7 @@ arch_bu_start_min: "{{ lookup('env','ARCHIVE_BACKUP_MIN')|default('30',true) }}"
 # backup_mount_path: "/backups" #an nfs mount point
 
 # workload-agent related variables
-install_workload_agent: "{{ lookup('env','INSTALL_WORKLOAD_AGENT')|lower|default(swlib_path_default,false) }}"
+install_workload_agent: "{{ lookup('env','INSTALL_WORKLOAD_AGENT')|lower|default('false',true) }}"
 oracle_metrics_secret: "{{ lookup('env','ORACLE_METRICS_SECRET') }}"
 
 
@@ -137,6 +137,7 @@ home_name: "{% if free_edition %}dbhomeFree{% else %}dbhome_1{% endif %}"
 oracle_sid: "{% if db_config_type == 'SI' %}{{ db_name }}{% else %}{{ db_name }}{{ instance_num }}{% endif %}"
 asm_sid: "{% if db_config_type == 'SI' %}+ASM{% else %}+ASM{{ instance_num }}{% endif %}"
 run_initial_bu: true
+password_pattern: "^[a-zA-Z0-9@+~*]{1,128}$"
 
 # Installation options:
 create_db: true
