--- a/roles/ora-host/tasks/main.yml
+++ b/roles/ora-host/tasks/main.yml
@@ -117,11 +117,28 @@
     - not (ansible_distribution == 'RedHat' and ansible_distribution_major_version | int == 7)
   tags: os-packages
 
-- name: Install Google Cloud Workload Agent
+- name: Check if running on Google Cloud
+  uri:
+    url: http://metadata.google.internal
+    method: GET
+    return_content: no
+    headers:
+      Metadata-Flavor: Google
+  register: gcp_check
+  failed_when: false
+  changed_when: false
+  ignore_errors: true
+
+- name: Set is_gcp fact based on the response from metadata server
+  set_fact:
+    is_gcp: "{{ (gcp_check.status is defined and gcp_check.status == 200) | bool }}"
+  tags: workload-agent
+
+- name: Install Google Cloud Agent for Compute Workloads
   include_tasks:
     file: workload_agent.yml
   when:
-    - cluster_type != "RAC"
+    - is_gcp | bool
     - install_workload_agent | bool
   tags: workload-agent
 
@@ -129,19 +146,22 @@
   include_tasks:
     file: google_cloud_cli.yml
   when:
-    - cluster_type != "RAC"
+    - is_gcp | bool
     - install_workload_agent | bool
     - oracle_metrics_secret | length > 0
   tags: workload-agent
 
-- name: Fetch and validate workload-agent's database user password
+- name: Fetch and validate oracle_metrics_secret
   command: gcloud --quiet secrets versions access {{ oracle_metrics_secret }}
-  register: wlm_agent_password
-  failed_when: wlm_agent_password.stdout | length == 0 or "ERROR" in wlm_agent_password.stderr
+  register: result
+  failed_when: >
+    (result.stdout | length == 0) or
+    ("ERROR" in result.stderr) or 
+    (not (result.stdout is match(password_pattern)))
   changed_when: false
   no_log: true
   when:
-    - cluster_type != "RAC"
+    - is_gcp | bool
     - install_workload_agent | bool
     - oracle_metrics_secret | length > 0
   tags: workload-agent
