--- a/config-db.yml
+++ b/config-db.yml
@@ -45,28 +45,10 @@
         - lookup('env', 'PRIMARY_IP_ADDR') is not defined or lookup('env', 'PRIMARY_IP_ADDR') | length == 0
       tags: primary-db
 
-    - name: Check if running on Google Cloud
-      uri:
-        url: http://metadata.google.internal
-        method: GET
-        return_content: no
-        headers:
-          Metadata-Flavor: Google
-      register: gcp_check
-      failed_when: false
-      changed_when: false
-      ignore_errors: true
-      tags: workload-agent
-
-    - name: Set is_gcp fact based on the response from metadata server
-      set_fact:
-        is_gcp: "{{ (gcp_check.status is defined and gcp_check.status == 200) | bool }}"
-      tags: workload-agent
-
     - include_role:
         name: workload-agent
       when:
-        - is_gcp | bool
+        - ansible_facts['product_name'] == "Google Compute Engine"
         - create_db | bool
         - install_workload_agent | bool
         - oracle_metrics_secret | length > 0
