install the agent even if not creating a database

--- a/roles/workload-agent/tasks/install.yml
+++ b/roles/workload-agent/tasks/install.yml
@@ -19,6 +19,12 @@
   when: ansible_os_family != "RedHat"
   tags: install-workload-agent
 
+- name: Fail if not on GCP
+  fail:
+    msg: "The Google Cloud Agent for Compute Workloads can only be installed on Google Cloud Engine"
+  when: ansible_facts['product_name'] != "Google Compute Engine"
+  tags: install-workload-agent
+
 - name: Add google-cloud-workload-agent repository
   yum_repository:
     name: google-cloud-workload-agent
