set install_workload_agent to true and update the message in the fail task

--- a/roles/ora-host/tasks/validate_passwords.yml
+++ b/roles/ora-host/tasks/validate_passwords.yml
@@ -34,7 +34,7 @@
 
 - name: Fail if password doesn't match expected pattern
   fail:
-    msg: "Secret was fetched, but did not match expected pattern."
+    msg: "Secret was fetched, but did not match expected pattern: {{ password_pattern }}"
   when:
     - not (agent_pass_result.skipped | default(false))
     - agent_pass_result.rc == 0
@@ -61,7 +61,7 @@
 
 - name: Fail if password doesn't match expected pattern
   fail:
-    msg: "Secret was fetched, but did not match expected pattern."
+    msg: "Secret was fetched, but did not match expected pattern: {{ password_pattern }}"
   when:
     - not (sys_pass_result.skipped | default(false))
     - sys_pass_result.rc == 0
