--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -60,6 +60,6 @@ ntp_pref               = "169.254.169.254"
 ora_listener_port      = "1521"
 ora_redo_log_size      = "100MB"
 skip_database_config   = false
-install_workload_agent = false
+install_workload_agent = true
 oracle_metrics_secret  = ""
 db_password_secret     = ""
