--- a/roles/ora-host/tasks/validate_passwords.yml
+++ b/roles/ora-host/tasks/validate_passwords.yml
@@ -16,9 +16,9 @@
 - name: Fetch workload-agent's user password
   command: gcloud --quiet secrets versions access {{ oracle_metrics_secret }}
   register: agent_pass_result
-  changed_when: false
-  failed_when: false
-  no_log: true
+  changed_when: false # the command's exit code is checked in a separate task to show a clear error message.
+  failed_when: false 
+  no_log: true # avoids leaking sensitive values in logs.
   when:
     - install_workload_agent | bool
     - oracle_metrics_secret | length > 0
@@ -28,6 +28,9 @@
   fail:
     msg: "Command failed: stderr={{ agent_pass_result.stderr }}"
   when: 
+    # Skip this task if the fetch task was skipped.
+    # agent_pass_result.skipped will be true if the fetch task didn't run due to 'when:' conditions.
+    # We use default(false) in case 'skipped' is not set (e.g. if the task ran successfully).
     - not (agent_pass_result.skipped | default(false))
     - agent_pass_result.rc != 0
   tags: validate-db-passwords
