--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -16,13 +16,25 @@
 # General settings
 gcs_source                   = "gs://your-gcs-bucket/oracle-toolkit.zip"
 ora_swlib_bucket             = "gs://your-oracle-software-bucket"
-region                       = "us-central1"
-zone                         = "us-central1-b"
 project_id                   = "your-project-id"
-network                      = "default"
-subnetwork                   = "default"
 vm_service_account           = "your-vm-service-account@your-project-id.iam.gserviceaccount.com"
 control_node_service_account = "your-control-node-service-account@your-project-id.iam.gserviceaccount.com"
+
+# Either the single-instance or the multi-instance input variables must be specified.
+
+# Single-instance deployment
+region                       = "us-central1"
+zone                         = "us-central1-b"
+network                      = "default"
+subnetwork                   = "default"
+
+# Multi-instance Data Guard deployment
+region1 = "us-central1"
+region2 = "us-central1"
+subnetwork1 = "default"
+subnetwork2 = "default"
+zone1 = "us-central1-b"
+zone2 = "us-central1-c"
 
 # Instance settings
 instance_name        = "orcl"
