add WLM-specific fields
- Renamed the plugin file to 'ansible_cloud_logging'.
- Improved inline documentation.
- Renamed the 'multiprocessing' option to 'enable_async_logging', and enabled it by default.
- Renamed the 'ignore_erros' option to 'ignore_gcp_api_errors'.
- Added WLM-specific fields to every logged event to match expected format.
- Introduced a new 'deployment_name' input variable in the Terraform module.
  - Passed it through `startup.sh`, which exports it as an environment variable.
  - The `ansible_cloud_logging.py` plugin then reads this environment variable.
  - This is an environment variable, not a plugin parameter, since it's only relevant for WLM-managed deployments and would not apply to general use.
- Updated 'terraform.md' with instructions on enabling and configuring the plugin.

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -17,3 +17,4 @@ command_warnings                = False
 #log_name = ansible_cloud_logging
 #ignore_errors = false
 #print_uuid = true
+#enable_async_logging = true
