Add `pipelining=true` to ansible.cfg

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -12,6 +12,9 @@ interpreter_python              = auto_legacy_silent
 command_warnings                = False
 #callback_plugins                = ./tools/callback_plugins
 
+[ssh_connection]
+pipelining                      = True
+
 #[cloud_logging]
 #project = your-project
 #log_name = ansible_cloud_logging
