--- a/roles/workload-agent/tasks/metric_collection.yml
+++ b/roles/workload-agent/tasks/metric_collection.yml
@@ -14,6 +14,7 @@
 
 ---
 - name: Fetch workload agent user password from Secret Manager
+  delegate_to: primary1
   command: gcloud --quiet secrets versions access {{ oracle_metrics_secret }}
   register: result
   changed_when: false
@@ -24,12 +25,14 @@
   tags: workload-agent
 
 - name: Validate password format
+  delegate_to: primary1
   fail:
     msg: "Invalid password format. It must match this pattern: {{ password_pattern }}"
   when: not (result.stdout is match(password_pattern))
   tags: workload-agent
 
 - name: Create Oracle user for Google Cloud Agent for Compute Workloads
+  delegate_to: primary1
   become: true
   become_user: "{{ oracle_user }}"
   shell: |
