remove --real-time-apply flag

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -119,7 +119,7 @@ install_workload_agent: "{{ lookup('env','INSTALL_WORKLOAD_AGENT')|lower|default
 oracle_metrics_secret: "{{ lookup('env','ORACLE_METRICS_SECRET')|lower|default('', true)}}"
 
 # Data Guard modes
-real_time_apply: "{{ lookup('env','REAL_TIME_APPLY')|lower|default(true) }}"
+real_time_apply: true
 data_guard_protection_mode: "{{ lookup('env','DATA_GUARD_PROTECTION_MODE')|lower|default('Maximum Availability', true)}}"
 log_transport_mode: "{{ 'ASYNC' if data_guard_protection_mode | upper == 'MAXIMUM PERFORMANCE' else 'SYNC' }}"
 
