Avoid overwriting SYS user password on primary node in Data Guard deployment

--- a/roles/db-copy/tasks/active-copy.yml
+++ b/roles/db-copy/tasks/active-copy.yml
@@ -135,54 +135,15 @@
       set_fact:
         password_file_name: "{{ password_file if password_file | length > 0 else (oracle_home + '/dbs/orapw' + db_name) if orapw_home_stat.stat.exists else (oracle_base + '/dbs/orapw' + db_name) }}"
 
-    - name: Active-copy | Back up password file from file system
-      copy:
-        src: "{{ password_file_name }}"
-        dest: "{{ oracle_home }}/dbs/orapw{{ db_name }}.{{ lookup('pipe', 'date +%Y-%m-%d-%H-%M') }}"
-        owner: "{{ oracle_user }}"
-        group: "{{ oracle_group }}"
-        mode: "u=wr,go="
-        remote_src: true
-      delegate_to: primary1
-      become: true
-      become_user: "{{ oracle_user }}"
+    - name: Active-copy | Retrieve DB password from Secret Manager
+      command: gcloud --quiet secrets versions access {{ db_password_secret }}
+      register: gcloud_result
+      changed_when: false
+      # the failure reason won't be shown because no_log is enabled
+      # DB password validation is already handled earlier in roles/ora-host/tasks/main.yml
+      no_log: true
       when:
-        - password_file is not search('^\\+')
-        - (orapw_home_stat.stat.exists or orapw_base_stat.stat.exists)
-
-    - name: Active-copy | Back up password file from ASM
-      shell: |
-        set -o pipefail
-        asmcmd cp {{ password_file }} {{ grid_home }}/dbs/orapw{{ db_name }}.{{ lookup('pipe', 'date +%Y-%m-%d-%H-%M') }}
-      environment:
-        ORACLE_HOME: "{{ grid_home }}"
-        ORACLE_SID: "{{ asm_sid }}"
-        PATH: "{{ grid_home }}/bin:/usr/local/bin:/bin:/usr/bin:/usr/local/sbin:/usr/sbin"
-      delegate_to: primary1
-      become: true
-      become_user: "{{ grid_user }}"
-      when: password_file is search('^\\+')
-
-    - name: Active-copy | Generate random password
-      set_fact:
-        sys_pass: "{{ lookup('password', '/dev/null length=16 chars=ascii_letters,digits') }}0#_"
-      no_log: true
-
-    - name: Active-copy | Set sys password for primary database
-      command:
-        argv:
-          - "{{ oracle_home }}/bin/orapwd"
-          - "file={{ password_file_name }}"
-          - "force=y"
-          - "password={{ sys_pass }}"
-      environment:
-        ORACLE_HOME: "{{ oracle_home }}"
-        ORACLE_SID: "{{ oracle_sid }}"
-        PATH: "{{ oracle_home }}/bin:/usr/local/bin:/bin:/usr/bin:/usr/local/sbin:/usr/sbin"
-      delegate_to: primary1
-      become: true
-      become_user: "{{ oracle_user }}"
-      no_log: true
+        - db_password_secret | length > 0
 
     - name: Active-copy | Set sys password for auxiliary instance
       command:
@@ -190,7 +151,7 @@
           - "{{ oracle_home }}/bin/orapwd"
           - "file={{ password_file_name }}"
           - "force=y"
-          - "password={{ sys_pass }}"
+          - "password={{ gcloud_result.stdout }}"
       environment:
         ORACLE_HOME: "{{ oracle_home }}"
         ORACLE_SID: "{{ oracle_sid }}"
@@ -213,8 +174,6 @@
       command:
         argv:
           - "{{ oracle_home }}/bin/rman"
-          - 'target "sys/{{ sys_pass }}@//{{ lookup(''env'', ''PRIMARY_IP_ADDR'') }}:{{ listener_port | default(1521, true) }}/{{ db_name }}{% if db_domain | default('''', true) | length > 0 %}.{{ db_domain }}{% endif %}"'
-          - 'auxiliary "sys/{{ sys_pass }}@//{{ lookup(''env'', ''INSTANCE_IP_ADDR'') }}:{{ listener_port | default(1521, true) }}/{{ standby_name }}{% if db_domain | default('''', true) | length > 0 %}.{{ db_domain }}{% endif %}"'
           - "cmdfile={{ oracle_home }}/dbs/duplicate.cmd"
           - "log={{ oracle_home }}/dbs/duplicate.log"
       environment:
