Replace regex password check with explicit rules to require all character types

--- a/roles/ora-host/tasks/validate_passwords.yml
+++ b/roles/ora-host/tasks/validate_passwords.yml
@@ -16,8 +16,8 @@
 - name: Fetch workload-agent's user password
   command: gcloud --quiet secrets versions access {{ oracle_metrics_secret }}
   register: agent_pass_result
-  changed_when: false # the command's exit code is checked in a separate task to show a clear error message.
-  failed_when: false 
+  changed_when: false 
+  failed_when: false # the command's exit code is checked in a separate task to show a clear error message.
   no_log: true # avoids leaking sensitive values in logs.
   when:
     - install_workload_agent | bool
@@ -35,7 +35,7 @@
     - agent_pass_result.rc != 0
   tags: validate-db-passwords
 
-- name: Fail if password doesn't match expected pattern
+- name: Fail if workload agent database password doesn't match expected pattern
   fail:
     msg: "Secret was fetched, but did not match expected pattern: {{ password_pattern }}"
   when:
@@ -44,11 +44,11 @@
     - not (agent_pass_result.stdout is match(password_pattern))
   tags: validate-db-passwords
 
-- name: Fetch DB password
+- name: Fetch SYS database password
   command: gcloud --quiet secrets versions access {{ db_password_secret }}
   register: sys_pass_result
   changed_when: false
-  failed_when: false
+  failed_when: false # the command's exit code is checked in a separate task to show a clear error message.
   no_log: true
   when:
     - db_password_secret | length > 0
@@ -57,12 +57,15 @@
 - name: Fail if gcloud command failed
   fail:
     msg: "Command failed: stderr={{ sys_pass_result.stderr }}"
-  when: 
+  when:
+    # Skip this task if the fetch task was skipped.
+    # sys_pass_result.skipped will be true if the fetch task didn't run due to 'when:' conditions.
+    # We use default(false) in case 'skipped' is not set (e.g. if the task ran successfully).
     - not (sys_pass_result.skipped | default(false))
     - sys_pass_result.rc != 0
   tags: validate-db-passwords
 
-- name: Fail if password doesn't match expected pattern
+- name: Fail if SYS password doesn't match expected pattern
   fail:
     msg: "Secret was fetched, but did not match expected pattern: {{ password_pattern }}"
   when:
