--- a/roles/workload-agent/tasks/create_db_user.yml
+++ b/roles/workload-agent/tasks/create_db_user.yml
@@ -17,16 +17,22 @@
   command: gcloud --quiet secrets versions access {{ oracle_metrics_secret }}
   register: result
   changed_when: false
-  failed_when: >
-    (result.stdout | length == 0) or
-    ("ERROR" in result.stderr)
+  failed_when: false # the command's exit code is checked in a separate task to show a clear error message.
   no_log: true
   tags: workload-agent
 
-- name: Validate password format
+- name: Fail if gcloud command failed
   fail:
-    msg: "Invalid password format. It must match this pattern: {{ password_pattern }}"
-  when: not (result.stdout is match(password_pattern))
+    msg: "Command failed: stderr={{ result.stderr }}"
+  when: result.rc != 0
+  tags: workload-agent
+
+- name: Fail if password doesn't match expected pattern
+  fail:
+    msg: "Secret was fetched, but did not match expected pattern: {{ password_pattern }}"
+  when:
+    - result.rc == 0
+    - not (result.stdout is match(password_pattern))
   tags: workload-agent
 
 - name: Create Oracle user for Google Cloud Agent for Compute Workloads
@@ -36,7 +42,7 @@
     set -o pipefail
     sqlplus -s -L / as sysdba <<EOF
     WHENEVER SQLERROR EXIT SQL.SQLCODE;
-    CREATE USER {{ workload_agent_username }} IDENTIFIED BY {{ result.stdout }};
+    CREATE USER {{ workload_agent_username }} IDENTIFIED BY "{{ result.stdout }}";
     GRANT CREATE SESSION,SELECT_CATALOG_ROLE,SYSDG TO {{ workload_agent_username }};
     EXIT;
     EOF
