--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -121,6 +121,11 @@ control_node_checks: false
 managed_host_checks: false
 
 gi_software:
+  - name: 22c_gi
+    version: 21.4.0.0.0
+    files:
+      - { name: "V1011504-02.zip", sha256sum: "070D4471BC067B1290BDCEE6B1C1FFF2F21329D2839301E334BCB2A3D12353A3", md5sum: "s/vbdiGtgsvU9AlD7/3Rvg==",
+          alt_name: "LINUX.X64_213000_grid_home.zip", alt_sha256sum: "070D4471BC067B1290BDCEE6B1C1FFF2F21329D2839301E334BCB2A3D12353A3", alt_md5sum: "s/vbdiGtgsvU9AlD7/3Rvg==" }
   - name: 21c_gi
     version: 21.3.0.0.0
     files:
@@ -150,6 +155,20 @@ gi_software:
       - { name: "p13390677_112040_Linux-x86-64_3of7.zip", sha256sum: "09C08AD3E1EE03DB1707F01C6221C7E3E75EC295316D0046CC5D82A65C7B928C", md5sum: "BM7zeZHbGPgZD31KGbJpEg==" }
 
 rdbms_software:
+  - name: 23ai_free_23_9
+    version: 23.8.0.25.05
+    editions: FREE
+    files:
+      - { name: "oracle-database-preinstall-23ai-1.0-3.el8.x86_64.rpm", sha256sum: "4578e6d1cf566e04541e0216b07a0372725726a7c339423ee560255cb918xxxx", md5sum: "TmjqUT87XXwv7NbXGECpTA==" }
+      - { name: "oracle-database-free-23ai-23.8-2.el8.x86_64.rpm", sha256sum: "cd0d16939150e6ec5e70999a762a13687bfa99b05c4f310593e7ca3892e1xxxx", md5sum: "hkL/hxeYbXXz5lz+3r3kww==" }
+  - name: 23ai_free_23_10
+    version: 23.8.0.25.09
+    editions:
+      - FREE
+      - ENTERPRISE
+    files:
+      - { name: "oracle-database-preinstall-23ai-1.0-3.el8.x86_64.rpm", sha256sum: "4578e6d1cf566e04541e0216b07a0372725726a7c339423ee560255cb918xxxx", md5sum: "TmjqUT87XXwv7NbXGECpTA==" }
+      - { name: "oracle-database-free-23ai-23.8-2.el8.x86_64.rpm", sha256sum: "cd0d16939150e6ec5e70999a762a13687bfa99b05c4f310593e7ca3892e1xxxx", md5sum: "hkL/hxeYbXXz5lz+3r3kww==" }
   - name: 23ai_free_23_8
     version: 23.8.0.25.04
     edition: FREE
@@ -251,6 +270,8 @@ opatch_patches:
   - { category: "OPatch", release: "18.0.0.0.0", patchnum: "6880880", patchfile: "p6880880_180000_Linux-x86-64.zip", md5sum: "" }
   - { category: "OPatch", release: "19.3.0.0.0", patchnum: "6880880", patchfile: "p6880880_190000_Linux-x86-64.zip", md5sum: "" }
   - { category: "OPatch", release: "21.3.0.0.0", patchnum: "6880880", patchfile: "p6880880_210000_Linux-x86-64.zip", md5sum: "" }
+  - { category: "OPatch", release: "21.4.0.0.0", patchnum: "6880880", patchfile: "p6880880_190010_Linux-x86-64.zip", md5sum: "" }
+  - { category: "OPatch", release: "21.5.0.0.0", patchnum: "6880880", patchfile: "p6880880_210000_Linux-x86-64.zip", md5sum: "" }
 
 gi_interim_patches:
   - category: "HAS_interim_patch"
@@ -265,6 +286,18 @@ gi_interim_patches:
     patchutil: "opatch"
     files:
       - { name: "p18370031_112040_Linux-x86-64.zip", sha256sum: "D8506DF94D0E646084F1708BEA9948E996B26CF0C33289ACAB0F614518329F98", md5sum: "KggeYUXU5NK/U1BwndOv+g==" }
+  - category: "HAS_interim_patch"
+    version: 12.2.0.5.3
+    patchnum: "25078435"
+    patchutil: "gridsetup"
+    files:
+      - { name: "p25078431_122010_Linux-x86-64.zip", sha256sum: "FA056EBD0FE0AD134F2B5C53F0DDF6F6A5DC73C7AE40DAEF18D0629850149525", md5sum: "hK1WOGC1g/3QUryg3MM5OQ==" }
+  - category: "HAS_interim_patch"
+    version: 12.2.0.5.1
+    patchnum: "25078433"
+    patchutil: "gridsetup"
+    files:
+      - { name: "p25078431_122010_Linux-x86-64.zip", sha256sum: "FA056EBD0FE0AD134F2B5C53F0DDF6F6A5DC73C7AE40DAEF18D0629850149525", md5sum: "hK1WOGC1g/3QUryg3MM5OQ==" }
 
 gi_patches:
 # ensure the versions are in order
@@ -339,7 +372,6 @@ gi_patches:
   - { category: "RU", base: "19.3.0.0.0", release: "19.25.0.0.241015", patchnum: "36866740", patchfile: "p36866740_190000_Linux-x86-64.zip", patch_subdir: "/36916690", prereq_check: false, method: "opatchauto apply", ocm: false, upgrade: false, md5sum: "f8DKaIiP7v811/WaRyacTQ==" }
   - { category: "RU", base: "19.3.0.0.0", release: "19.26.0.0.250121", patchnum: "37262208", patchfile: "p37262208_190000_Linux-x86-64.zip", patch_subdir: "/37257886", prereq_check: false, method: "opatchauto apply", ocm: false, upgrade: false, md5sum: "zqZeJ3/ujDWcLr+reZOHpw==" }
   - { category: "RU", base: "19.3.0.0.0", release: "19.27.0.0.250415", patchnum: "37591516", patchfile: "p37591516_190000_Linux-x86-64.zip", patch_subdir: "/37641958", prereq_check: false, method: "opatchauto apply", ocm: false, upgrade: false, md5sum: "kkyZC9RP8eolBgdu9Y3q7g==" }
-
 # 21c GRID RU - 21.4 and 21.7 are available only via SR
 #     RDBMS RU - 21.4 - 21.7 are available only via SR
 #     so 21.5 and 21.6 are commented out here, even though available
