--- a/roles/ora-host/tasks/validate_passwords.yml
+++ b/roles/ora-host/tasks/validate_passwords.yml
@@ -26,7 +26,7 @@
 
 - name: Fail if gcloud command failed
   fail:
-    msg: "Command failed: stderr={{ agent_pass_result.stderr }}"
+    msg: "Command failed with rc={{ agent_pass_result.rc }}: stderr={{ agent_pass_result.stderr }}"
   when: 
     # Skip this task if the fetch task was skipped.
     # agent_pass_result.skipped will be true if the fetch task didn't run due to 'when:' conditions.
@@ -56,7 +56,7 @@
 
 - name: Fail if gcloud command failed
   fail:
-    msg: "Command failed: stderr={{ sys_pass_result.stderr }}"
+    msg: "Command failed with rc={{ sys_pass_result.rc }}: stderr={{ sys_pass_result.stderr }}"
   when:
     # Skip this task if the fetch task was skipped.
     # sys_pass_result.skipped will be true if the fetch task didn't run due to 'when:' conditions.
